--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-This is working
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CloudLaunch Pro</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(120deg, #0f2027, #203a43, #2c5364);
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    header {
+      padding: 2rem;
+      text-align: center;
+    }
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 0.5rem;
+    }
+    p {
+      font-size: 1.2rem;
+      max-width: 600px;
+      margin: auto;
+    }
+    .button {
+      margin-top: 2rem;
+      padding: 1rem 2rem;
+      background-color: #00c6ff;
+      border: none;
+      border-radius: 5px;
+      color: #000;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+    .button:hover {
+      background-color: #0072ff;
+      color: #fff;
+    }
+    footer {
+      margin-top: auto;
+      padding: 1rem;
+      font-size: 0.9rem;
+      opacity: 0.6;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>🚀 CloudLaunch Pro</h1>
+    <p>Your Elastic Beanstalk app is successfully deployed. Get ready to explore scalable cloud power!</p>
+    <button class="button" onclick="alert('Welcome to your cloud journey!')">Get Started</button>
+  </header>
+
+  <footer>
+    &copy; 2025 Shubham Cloud Designs
+  </footer>
+</body>
+</html>
