--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </header>
 
   <footer>
-    &copy; 2025 Shubham Cloud Designs
+    &copy; 2025 Shubham Cloud Designs version 1
   </footer>
 </body>
 </html>
