--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CloudLaunch Pro maXXX</title>
+  <title>CloudLaunch ProMax </title>
   <style>
     body {
       margin: 0;
@@ -58,7 +58,7 @@
   </header>
 
   <footer>
-    &copy; 2025 Shubham Cloud Designs version 1
+    &copy; 2025 Shubham Cloud Designs version 2
   </footer>
 </body>
 </html>
